--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-fileupload": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0",
+    "node-fetch": "^3.3.2",
     "validator": "^13.11.0"
   },
   "devDependencies": {
